--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>6-typescript</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="game__container">
         <div class="current-score" data-current-score>100</div>
         <div class="ball" data-ball></div>
-        <div class="changing" data-changing></div>
+        <div class="changing-score" data-changing></div>
         <div class="letter-container">
             <p class="current-letter" data-current-letter></p>
         </div>
